# lark-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/lark_bridge/: __init__.py  _proto_utils.py  _urls.py  client.py  decoder.py  drive.py  listener.py  mcp_server.py  search.py  sender.py
src/lark_bridge/proto/: proto.proto  proto_pb2.py
tests/: test_client.py  test_decoder.py
